services/tekton/dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: tekton-pipelines
  name: tekton-dashboard-ingress
  labels:
    app: tekton-dashboard
  # Enable SSL
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/secure-upstream: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: "route53"
    cert-manager.io/acme-challenge-type: "dns01"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - build.lab.marius.xyz
      secretName: tls-tekton-dashboard
  rules:
    - host: build.lab.marius.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
